--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,14 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="0dp"
-    tools:context=".MainActivity">
+    tools:context=".Activity.IntroActivity">
 
     <EditText
-        android:id="@+id/editTextText3"
+        android:id="@+id/e1"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="68dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
@@ -22,6 +22,7 @@
         android:inputType="text|textEmailAddress|textAutoComplete"
         android:paddingLeft="10dp"
         android:textColorHint="#756c6c"
+        app:layout_constraintBottom_toTopOf="@+id/e1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,8 +44,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.41" />
 
+
     <EditText
-        android:id="@+id/editTextText3"
+        android:id="@+id/e1"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
@@ -57,14 +59,15 @@
         android:inputType="text|textPersonName"
         android:paddingLeft="10dp"
         android:textColorHint="#756c6c"
+        app:layout_constraintBottom_toTopOf="@+id/e1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.071" />
 
     <EditText
-        android:id="@+id/editTextText3"
+        android:id="@+id/e1"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
@@ -87,14 +90,14 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:text=" signup"
         android:textSize="20"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
+        app:layout_constraintTop_toBottomOf="@+id/e1" />
 
     <TextView
         android:id="@+id/textView2"
