--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -90,7 +90,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="32dp"
         android:text=" signup"
-        android:textSize="20"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
