--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="0dp"
-    tools:context=".MainActivity">
+    tools:context=".Activities.LoginActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -43,7 +42,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:inputType="textEmailAddress" />
-
 
     <EditText
         android:id="@+id/editTextText4"
@@ -139,5 +137,4 @@
         app:layout_constraintVertical_bias="0.0"
         app:layout_goneMarginLeft="0dp"
         app:srcCompat="@drawable/top_background" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
