--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="0dp"
-    tools:context=".MainActivity">
+    tools:context=".Activities.SignUpActivity">
 
     <EditText
         android:id="@+id/editTextText3"
@@ -44,7 +43,7 @@
         app:layout_constraintVertical_bias="0.41" />
 
     <EditText
-        android:id="@+id/editTextText3"
+        android:id="@+id/editTextText1"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
@@ -62,9 +61,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-
     <EditText
-        android:id="@+id/editTextText3"
+        android:id="@+id/editTextText2"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
@@ -122,5 +120,4 @@
         app:layout_constraintVertical_bias="0.0"
         app:layout_goneMarginLeft="0dp"
         app:srcCompat="@drawable/top_background" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
